--- a/speakers.html
+++ b/speakers.html
@@ -81,105 +81,48 @@
         </div>
       </div>
     </div>
-        <div class="row">
-      <div class="item" id='item1' data-toggle="modal" data-target="#hitesh">
+    <div class="row">
+      <div class="item" id='item5' data-toggle="modal" data-target="#hitesh">
         <div class="inlay">
           <h1 class="name"> Hitesh Oberoi</h1>
           <p class="text"> Owner - InfoEdge </p>
         </div>
       </div>
-      <div class="item" id='item2' data-toggle="modal" data-target="#kaizaad">
+      <div class="item" id='item6' data-toggle="modal" data-target="#kaizaad">
         <div class="inlay">
           <h1 class="name">Kaizaad Kotwal</h1>
           <p class="text">Producer. Director. Writer.</p>
         </div>
       </div>
-      <div class="item" id='item3'data-toggle="modal" data-target="#manu">
+      <div class="item" id='item7'data-toggle="modal" data-target="#manu">
         <div class="inlay">
           <h1 class="name">Manu Chopra</h1>
           <p class="text">AI. Computer Science.</p>
         </div>
       </div>
-      <div class="item" id='item4'data-toggle="modal" data-target="#amit">
+      <div class="item" id='item8'data-toggle="modal" data-target="#amit">
         <div class="inlay">
           <h1 class="name">Amit Lodha</h1>
           <p class="text">IPS. Novelist. Sportsperson.</p>
         </div>
       </div>
     </div>
+        <div class="row">
+      <div class="item" id='item9' data-toggle="modal" data-target="#hitesh">
+        <div class="inlay">
+          <h1 class="name"> Hitesh Oberoi</h1>
+          <p class="text"> Owner - InfoEdge </p>
+        </div>
+      </div>
+      <div class="item" id='item10' data-toggle="modal" data-target="#kaizaad">
+        <div class="inlay">
+          <h1 class="name">Kaizaad Kotwal</h1>
+          <p class="text">Producer. Director. Writer.</p>
+        </div>
+      </div>
+    </div>
 		<!-- Modal -->
-    <div class="modal fade" id="manu" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Manu Chopra</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="hitesh" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Hitesh Oberoi</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="modal fade" id="kaizaad" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Kaizaad Kotwal</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      ...
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    </div>
-  </div>
-</div>
-</div>
-<div class="modal fade" id="amit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Amit Lodha</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      ...
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    </div>
-  </div>
-</div>
-</div>
+
 
 
 </div>
