--- a/speakers.html
+++ b/speakers.html
@@ -53,13 +53,14 @@
         </ul>
       </div>
     </nav>
+
     <div id="particles-js">
 
     <div class="row">
       <div class="item" id='item1' data-toggle="modal" data-target="#hitesh">
         <div class="inlay">
-          <h1 class="name"> Hitesh Oberoi</h1>
-          <p class="text"> Owner - InfoEdge </p>
+          <h1 class="name">Hitesh Oberoi</h1>
+          <p class="text">Owner - InfoEdge</p>
         </div>
       </div>
       <div class="item" id='item2' data-toggle="modal" data-target="#kaizaad">
@@ -84,40 +85,40 @@
     <div class="row">
       <div class="item" id='item5' data-toggle="modal" data-target="#hitesh">
         <div class="inlay">
-          <h1 class="name"> Hitesh Oberoi</h1>
-          <p class="text"> Owner - InfoEdge </p>
+          <h1 class="name">Abhishek Singh</h1>
+          <p class="text">Founder of Peeqo. Technovator.</p>
         </div>
       </div>
       <div class="item" id='item6' data-toggle="modal" data-target="#kaizaad">
         <div class="inlay">
-          <h1 class="name">Kaizaad Kotwal</h1>
-          <p class="text">Producer. Director. Writer.</p>
+          <h1 class="name">Anuranjita Kumar</h1>
+          <p class="text">One of Fortune's Most Powerful Woman Leader's</p>
         </div>
       </div>
       <div class="item" id='item7'data-toggle="modal" data-target="#manu">
         <div class="inlay">
-          <h1 class="name">Manu Chopra</h1>
-          <p class="text">AI. Computer Science.</p>
+          <h1 class="name">Bickram Gosh</h1>
+          <p class="text">Artist. Musician.</p>
         </div>
       </div>
       <div class="item" id='item8'data-toggle="modal" data-target="#amit">
         <div class="inlay">
-          <h1 class="name">Amit Lodha</h1>
-          <p class="text">IPS. Novelist. Sportsperson.</p>
+          <h1 class="name">Cyrus Broacha</h1>
+          <p class="text">Comedian. Political Satirist.</p>
         </div>
       </div>
     </div>
-        <div class="row">
+    <div class="row">
       <div class="item" id='item9' data-toggle="modal" data-target="#hitesh">
         <div class="inlay">
-          <h1 class="name"> Hitesh Oberoi</h1>
-          <p class="text"> Owner - InfoEdge </p>
+          <h1 class="name">Kush Kamra</h1>
+          <p class="text">Trendsetter. Business Guru.</p>
         </div>
       </div>
       <div class="item" id='item10' data-toggle="modal" data-target="#kaizaad">
         <div class="inlay">
-          <h1 class="name">Kaizaad Kotwal</h1>
-          <p class="text">Producer. Director. Writer.</p>
+          <h1 class="name">Sabika Naqvi</h1>
+          <p class="text">Poet. Feminist.</p>
         </div>
       </div>
     </div>
