--- a/speakers.html
+++ b/speakers.html
@@ -18,6 +18,46 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="Assets/js/images.js"></script>
     <link rel="stylesheet" href="Assets/css/speaker.css">
+    <style>
+      canvas{
+        margin-top: -1000px;
+      }.scroll{
+        background: white!important;
+        transition: 0.5s all;
+      }
+      .scrollItem{
+        color:black!important;
+        transition: 0.5s all;
+      }.logoClass{
+        opacity: 0;
+        transition: 0.5s all;
+      }.logo{
+        transition: 0.5s all;
+      }
+      .nav-link{
+        transition: 0.5s all;
+      }
+    </style>
+    <script>
+    function addClass(){
+      if (window.matchMedia('(min-width: 767px)').matches) {
+        var lastScrollTop = 0;
+        $("#particles-js").scroll(function(event){
+           var st = $(this).scrollTop();
+           if (st > lastScrollTop){
+              $("nav").addClass("scroll");
+              $(".nav-link").addClass("scrollItem");
+              $(".logo").addClass("logoClass");
+           } else {
+              $("nav").removeClass("scroll");
+              $(".nav-link").removeClass("scrollItem");
+              $(".logo").removeClass("logoClass");
+           }
+           lastScrollTop = st;
+        });
+      }
+    }
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
@@ -54,7 +94,7 @@
       </div>
     </nav>
 
-    <div id="particles-js">
+    <div id="particles-js" style="overflow-y:scroll;"onscroll="addClass()">
 
     <div class="row">
       <div class="item" id='item1' data-toggle="modal" data-target="#hitesh">
@@ -129,7 +169,11 @@
 </div>
     <script type="text/javascript" src="Assets/js/particles.js"></script>
     <script type="text/javascript" src="Assets/js/app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="Assets/js/jquery-3.3.1.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
