design changes to speakers nav

--- a/speakers.html
+++ b/speakers.html
@@ -22,14 +22,15 @@
       canvas{
         margin-top: -1000px;
       }.scroll{
-        background: white!important;
+        background: black!important;
         transition: 0.5s all;
+	border:2px solid white;
       }
       .scrollItem{
-        color:black!important;
+        color:white!important;
         transition: 0.5s all;
       }.logoClass{
-        opacity: 0;
+        opacity: 1;
         transition: 0.5s all;
       }.logo{
         transition: 0.5s all;
